<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="#88000000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/share_dialog_bg"
            >

            <LinearLayout
                android:id="@+id/inner_share_weixin"
                style="@style/share_dialog_btn_style">

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/wx_bg" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/share_weixin_friend" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inner_share_weixinhaoyou"
                style="@style/share_dialog_btn_style">

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/wx_circle_bg" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/share_weixin_circel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inner_share_ten_qq"
                style="@style/share_dialog_btn_style">

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/qq_bg" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/txt_qq" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/inner_share_ten_qzone"
                style="@style/share_dialog_btn_style">

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/qzone_bg" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/share_qzone" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_bg_share"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            >

        </View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <LinearLayout
                android:id="@+id/inner_share_weibo"
                style="@style/share_dialog_btn_style"
                android:visibility="gone"
                >

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/sina_bg" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/share_weibo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inner_share_copylink"
                style="@style/share_dialog_btn_style">

                <ImageView
                    style="@style/share_dialog_btn_img_style"
                    android:src="@mipmap/copy_link" />

                <TextView
                    style="@style/share_dialog_btn_text_style"
                    android:text="@string/share_more" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                ></LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/share_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@drawable/share_dialog_bg"
            android:text="@string/share_cancle"
            />
    </LinearLayout>

</RelativeLayout>